--- a/src/views/DepartmentOverview.css
+++ b/src/views/DepartmentOverview.css
@@ -1,6 +1,5 @@
 .department-overview {
-  max-width: 1400px;
-  margin: 0 auto;
+  width: 100%;
 }
 
 .stats-grid {
